--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
 <head>
   <title>hotdogb</title>
-  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
   
 <body>
